tests/regression/errors/basic/syntax_error_10.csd
// Syntax error test 10 - missing semicolon
sus x drip = 10
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
